--- a/ui/admin.html
+++ b/ui/admin.html
@@ -28,12 +28,12 @@
     <label for="title">Title:</label>
     <input type="text" id="title" name="title">
     <br>
-    <!-- <input type="date" id="date"> -->
-    <label for="image">image:</label>
-    <input type="file" id="image" name="image">
+    <input type="date" id="date">
+    <label for="image">Image URL:</label>
+    <input type="text" id="image" name="image">
     <br>
     <label for="description">Description:</label>
-    <textarea id="content" name="content"></textarea>
+    <textarea id="description" name="description"></textarea>
     <br>
     <button type="submit" id="submit-blog">Submit</button>
   </form>
@@ -72,9 +72,9 @@ setTimeout(function() {
 }, 3000);
 }
 // Get form elements
-const form2 = document.getElementById("blog-form");
+const form = document.getElementById("blog-form");
 const titleInput = document.getElementById("title");
-// const dateInput = document.getElementById("date");
+const dateInput = document.getElementById("date");
 const imageInput = document.getElementById("image");
 const descInput = document.getElementById("description");
 
@@ -84,16 +84,16 @@ form.addEventListener("submit", (e) => {
 
   // Get form data
   const title = titleInput.value;
-  //const date = dateInput.value;
+  const date = dateInput.value;
   const image = imageInput.value;
-  const content = contentInput.value;
+  const desc = descInput.value;
 
   // Create blog object
   const blog = {
     title: title,
-    //date: date,
+    date: date,
     image: image,
-    content: content,
+    desc: desc,
   };
 
   // Get existing blog list from local storage
@@ -105,50 +105,10 @@ form.addEventListener("submit", (e) => {
   // Save updated blog list to local storage
   localStorage.setItem("blogList", JSON.stringify(blogList));
 
-  
   // Redirect to blog list page
   showNotification("Blog added Succeful!")
   window.location.href = "blogs.html";
-
-
 });
-
-
-    // Get the form element
-    const form = document.getElementById('blog-form');
-
-    // Handle form submission
-    form.addEventListener('submit', (event) => {
-      // Prevent the form from submitting normally
-      event.preventDefault();
-
-      // Get the form data and file
-      const formData = new FormData();
-      formData.append('title', document.getElementById('title').value);
-      formData.append('image', document.getElementById('image').files[0]);
-      formData.append('content', document.getElementById('content').value);
-
-      // Send the form data to the API
-      fetch('http://localhost:3000/api/posts', {
-        method: 'POST',
-        body: formData
-      })
-      .then(response => {
-        if (response.ok) {
-          // Handle successful submission
-          console.log('Form submitted successfully!');
-        } else {
-          // Handle submission error
-          console.log(response)
-          console.log('Error submitting form.');
-        }
-      })
-      .catch(error => {
-        // Handle network error
-        console.log('Network error. Please try again later.');
-      });
-    });
-
 
 </Script>
 </body>
