--- a/ui/index.html
+++ b/ui/index.html
@@ -93,7 +93,7 @@
         </div>
       </div>
       <div class="name">
-        -------------------------<iconify-icon icon="mdi:twitter"  
+        ----------------------<iconify-icon icon="mdi:twitter"  
          width="40px"
         height="40px">></iconify-icon><span>Twitter</span>
         <iconify-icon icon="akar-icons:facebook-fill"
