--- a/ui/index.html
+++ b/ui/index.html
@@ -105,7 +105,7 @@
         height="40px">
       </iconify-icon><span>Instagram</span>
         <iconify-icon icon="carbon:logo-github"  width="40px"
-        height="40px"></iconify-icon><span>Github</span> ----------------------------
+        height="40px"></iconify-icon><span>Github</span> ----------------------
        
       </div>
     </section>
