--- a/ui/index.html
+++ b/ui/index.html
@@ -280,7 +280,7 @@
         };
 console.log(formData);
         // Send the form data to the API
-        fetch('http://localhost:3000/api/Contact', {
+        fetch('https://anxious-worm-outerwear.cyclic.app/api/Contact', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
