keep upgrading my project

--- a/ui/admin.html
+++ b/ui/admin.html
@@ -6,10 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Add blog</title>
   <link rel="stylesheet" href="admin.css">
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
-<body>
-<Style>
+<body onload="get()">
 
+<Style>
+*{
+  margin: 0;
+  border:border-box;
+  padding:0;
+}
   .blogg{
     background-image: url(./Images/sky.jpg);
     padding: 14rem;
@@ -30,12 +36,12 @@
     <label for="title">Title:</label>
     <input type="text" id="title" name="title">
     <br>
-    <input type="date" id="date">
-    <label for="image">Image URL:</label>
-    <input type="text" id="image" name="image">
+    <!-- <input type="date" id="date"> -->
+    <label for="image">Image:</label>
+    <input type="file" id="image" name="image">
     <br>
     <label for="description">Description:</label>
-    <textarea id="description" name="description"></textarea>
+    <textarea id="content" name="description"></textarea>
     <br>
     <button type="submit" id="submit-blog">Submit</button>
   </form>
@@ -65,53 +71,45 @@
 
 <script>
 
-function showNotification(message) {
-var notification = document.getElementById("notification");
-var notificationMessage = document.getElementById("notification-message");
-notificationMessage.innerHTML = message;
-setTimeout(function() {
-  notification.style.display = "flex";
-}, 3000);
-}
-// Get form elements
-const form = document.getElementById("blog-form");
-const titleInput = document.getElementById("title");
-const dateInput = document.getElementById("date");
-const imageInput = document.getElementById("image");
-const descInput = document.getElementById("description");
+// Post Contact message
+   // Get the form element
+ const form = document.getElementById('form');
 
-// Handle form submission
-form.addEventListener("submit", (e) => {
-  e.preventDefault();
+ // Handle form submission
+ form.addEventListener('submit', (event) => {
+   // Prevent the form from submitting normally
+   event.preventDefault();
 
-  // Get form data
-  const title = titleInput.value;
-  const date = dateInput.value;
-  const image = imageInput.value;
-  const desc = descInput.value;
+   // Get the form data
+   const formData = {
+     title: document.getElementById('title').value,
+     image: document.getElementById('image').value,
+     content: document.getElementById('content').value
 
-  // Create blog object
-  const blog = {
-    title: title,
-    date: date,
-    image: image,
-    desc: desc,
-  };
-
-  // Get existing blog list from local storage
-  let blogList = JSON.parse(localStorage.getItem("blogList")) || [];
-
-  // Add new blog to blog list
-  blogList.push(blog);
-
-  // Save updated blog list to local storage
-  localStorage.setItem("blogList", JSON.stringify(blogList));
-
-  // Redirect to blog list page
-  showNotification("Blog added Succeful!")
-  window.location.href = "blogs.html";
-});
-
-</Script>
+   };
+console.log(formData);
+   // Send the form data to the API
+   fetch(`https://anxious-worm-outerwear.cyclic.app/api/posts`, {
+     method: 'POST',
+     headers: {
+       'Content-Type': 'application/json'
+     },
+     body: JSON.stringify(formData)
+   })
+   .then(response => {
+     if (response.ok) {
+       alert(`"Blog added successfully!!!"`)
+     } else {
+       // Handle submission error
+       console.log('Error submitting form.');
+     }
+   })
+   .catch(error => {
+     // Handle network error
+     console.log('Network error. Please try again later.');
+   });
+   form.reset
+ });
+</script>
 </body>
 </html>
